# simple_social_network

./: .gitignore  main.py  pyproject.toml
app/: main.py
docker/: docker-compose-kafka.yml
scripts/: create_sample_data.py  fmt
social_network/app/: main.py
social_network/backend/: main.py
social_network/chat_backend/: main.py  main_client.py
social_network/core/: constants.py
social_network/core/chat/interfaces/: message_broker.py
social_network/core/chat/kafka_redis/: kafka.py  message_broker.py  redis.py
social_network/core/repositories/in_memory/: post.py  user.py
social_network/core/repositories/interfaces/: comment.py  models.py  post.py  user.py
social_network/core/repositories/sql/: alembic.ini  comment.py  db.py  mydatabase.db  post.py  user.py
social_network/core/repositories/sql/migrations/: env.py
social_network/core/repositories/sql/migrations/versions/: 1f3be8ffc109_create_users_table.py  8fee0dd19a17_create_comments_table.py  eca2e3facc78_create_posts_table.py
social_network/core/repositories/sql/models/: comment.py  post.py  user.py
social_network/core/services/: chat.py  comments.py  common.py  models.py  service.py
social_network/frontend/: package.json
social_network/frontend/src/: App.css  App.tsx  types.ts
social_network/frontend/src/components/: HomePage.tsx  PostComments.tsx  PostView.tsx  UserView.tsx  UsersListView.tsx
src/: domain.py  interfaces.py  service.py
src/implementations/: in_memory.py  sqlite.py
