[project]
name = "simple-social-network"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.16.4",
    "black>=25.1.0",
    "fastapi[standard]>=0.116.1",
    "isort>=6.0.1",
    "kafka-python>=2.2.15",
    "pydantic>=2.11.7",
    "redis>=6.4.0",
    "sqlalchemy>=2.0.43",
]
